--- a/translations/ai_summary+intl-icu.en.yml
+++ b/translations/ai_summary+intl-icu.en.yml
@@ -4,6 +4,7 @@ ai_summary:
         success: 'Thank you for your feedback!'
         error: 'An error occurred while submitting your feedback.'
         error_token: 'Invalid security token.'
+        error_session: 'Unable to submit feedback. Please refresh the page and try again.'
         button:
             helpful: 'Mark as helpful'
             not_helpful: 'Mark as not helpful'
