--- a/translations/ai_summary+intl-icu.fr.yml
+++ b/translations/ai_summary+intl-icu.fr.yml
@@ -4,6 +4,7 @@ ai_summary:
         success: 'Merci pour votre retour !'
         error: "Une erreur s'est produite lors de l'envoi de votre retour."
         error_token: 'Jeton de sécurité invalide.'
+        error_session: 'Impossible de soumettre votre avis. Veuillez actualiser la page et réessayer.'
         button:
             helpful: 'Marquer comme utile'
             not_helpful: 'Marquer comme non utile'
